# surfer

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Evolution of AI_presentation.pptx  Fish_presentation.pptx  Makefile  Northen Lights_presentation.pptx  README.md  break.ipynb  browse_web.py  cli.py  config.py  convert.py  freak.py  main.py  move.ipynb  pyproject.toml  pyramid.py  requirements.txt  s2t.py  snake.py  sqrt.py  street_fighter.py  surf.py  test.ipynb  test2.py  utils.py
docs/: mkdocs.yml
docs/docs/: index.md
examples/: main.py
experiment/: test2.py
mlx_models/distil-medium.en/: weights.npz
notebooks/: break.ipynb  move.ipynb
src/: __init__.py  action.py  async_interaction_main.py  browse_web.py  config.yaml  convert.py  debug.py  gladia.py  langchain_main.py  main.py  modal.py  orchestrator.py  perception.py  surf.py  utils.py
src/depreciated/: action.py  async_interaction_main.py  browse_web.py  config.yaml  debug.py  gladia.py  langchain_main.py
src/llms/: anthropic.py  openai.py
src/mlx_models/distil-medium.en/: config.json  weights.npz
src/orchestrator/: graph_orchestrator.py  orchestrator.py  prompt.py  scratchpad.py  utils.py  web_helper.py
src/orchestrator/tools/: response.py  scratchpad.py  web.py
src/prompts/: latest_news.txt  linkedin_scraper.txt  research_paper.txt
src/schemas/: config.py  constants.py  llm.py  modal.py  models.py  prompt.py
src/utils/: directories.py  logging.py  utils.py
